0.02

0.01 2024-05-10T20:52:00+02:00
 - First version.