@@ -29,9 +29,10 @@ is_deeply(
 		['a', 'class', 'navigation'],
 		['b', 'div'],
 		['a', 'class', 'nav-item'],
-		['b', 'h3'],
+		['b', 'div'],
+		['a', 'class', 'title'],
 		['d', 'Item #1'],
-		['e', 'h3'],
+		['e', 'div'],
 		['e', 'div'],
 		['e', 'nav'],
 	],
@@ -62,16 +63,17 @@ is_deeply(
 		['a', 'class', 'navigation'],
 		['b', 'div'],
 		['a', 'class', 'my-class'],
+		['b', 'a'],
+		['a', 'href', 'https://example.com'],
 		['b', 'img'],
 		['a', 'src', '/image.png'],
 		['a', 'alt', 'Item #1'],
 		['e', 'img'],
-		['b', 'h3'],
-		['b', 'a'],
-		['a', 'href', 'https://example.com'],
+		['b', 'div'],
+		['a', 'class', 'title'],
 		['d', 'Item #1'],
+		['e', 'div'],
 		['e', 'a'],
-		['e', 'h3'],
 		['b', 'p'],
 		['d', 'This is description'],
 		['e', 'p'],
